--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "emoji-mart",
-  "version": "2.11.1",
+  "name": "@jestrux/emoji-mart",
+  "version": "2.11.2",
   "description": "Customizable Slack-like emoji picker for React",
   "main": "dist/index.js",
   "module": "dist-es/index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:missive/emoji-mart.git"
+    "url": "git://github.com/jestrux/emoji-mart.git"
   },
   "keywords": [
     "react",
