--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jestrux/emoji-mart",
+  "name": "emoji-matt",
   "version": "2.11.4",
   "description": "Customizable Slack-like emoji picker for React",
   "main": "dist/index.js",
